# tg-arceos-tutorial

./: .gitmodules  Cargo.toml  README.md
app-childtask/: .gitrepo  Cargo.toml  README.md
app-childtask/configs/: aarch64.toml  loongarch64.toml  riscv64.toml  x86_64.toml
app-childtask/scripts/: test.sh
app-childtask/src/: main.rs
app-childtask/xtask/src/: main.rs
app-collections/: Cargo.toml  README.md
app-collections/exercise/: Cargo.toml  Cargo.toml.orig
app-collections/exercise/src/: main.rs
app-collections/src/: main.rs
app-collections/xtask/src/: main.rs
app-fairsched/: Cargo.toml  README.md  build.rs  rust-toolchain.toml
app-fairsched/configs/: loongarch64.toml  riscv64.toml
app-fairsched/src/: main.rs
app-fairsched/xtask/src/: main.rs
app-guestaspace/: .gitignore  .gitrepo  Cargo.toml  README.md  build.rs  rust-toolchain.toml
app-guestaspace/.cargo/: config.toml
app-guestaspace/.github/workflows/: ci.yml
app-guestaspace/configs/: aarch64.toml  riscv64.toml
app-guestaspace/payload/gkernel/: .axconfig.toml  Cargo.toml.bak  linker-x86_64.ld
app-guestaspace/payload/gkernel/configs/: x86_64.toml
app-guestaspace/payload/gkernel/src/: main.rs
app-guestaspace/scripts/: test.sh
app-guestaspace/src/: csrs.rs  loader.rs  main.rs  vcpu.rs
app-guestaspace/src/aarch64/: mod.rs  vcpu.rs
app-guestaspace/src/x86_64/: mod.rs  svm.rs  vmcb.rs
app-guestaspace/xtask/src/: main.rs
app-guestmode/: Cargo.toml  README.md  build.rs
app-guestmode/configs/: aarch64.toml
app-guestmode/payload/skernel/src/: main.rs
app-guestmode/src/: loader.rs  main.rs
app-guestmode/src/aarch64/: guest.S  vcpu.rs
app-guestmode/src/x86_64/: svm.rs
app-guestmode/xtask/src/: main.rs
app-guestmonolithickernel/: .gitignore  .gitrepo  Cargo.toml  README.md
app-guestmonolithickernel/.github/workflows/: ci.yml
app-guestmonolithickernel/configs/: riscv64.toml  x86_64.toml
app-guestmonolithickernel/payload/gkernel/: .axconfig.toml  Cargo.toml.bak  build.rs.bak
app-guestmonolithickernel/payload/gkernel/.cargo/: config.toml
app-guestmonolithickernel/payload/gkernel/configs/: aarch64.toml  riscv64.toml  x86_64.toml
app-guestmonolithickernel/payload/gkernel/src/: main.rs
app-guestmonolithickernel/scripts/: test.sh
app-guestmonolithickernel/src/: loader.rs  main.rs  regs.rs
app-guestmonolithickernel/src/aarch64/: hvc.rs  mod.rs
app-guestmonolithickernel/src/x86_64/: mod.rs  svm.rs  vmcb.rs
app-guestmonolithickernel/xtask/src/: main.rs
app-guestvdev/: Cargo.toml  README.md
app-guestvdev/src/: main.rs
app-helloworld/: .gitignore  Cargo.toml  README.md
app-helloworld/.github/workflows/: ci.yml
app-helloworld/exercise/: Cargo.toml  Cargo.toml.orig
app-helloworld/exercise/src/: main.rs
app-helloworld/src/: main.rs
app-helloworld/xtask/src/: main.rs
app-lazymapping/: .axconfig.toml  .gitrepo  Cargo.toml  README.md  build.rs
app-lazymapping/.cargo/: config.toml
app-lazymapping/payload/src/: main.rs
app-lazymapping/scripts/: test.sh
app-lazymapping/src/: loader.rs  main.rs  syscall.rs  task.rs
app-lazymapping/xtask/src/: main.rs
app-loadapp/: Cargo.toml  README.md
app-loadapp/exercise/: Cargo.toml
app-loadapp/exercise/src/: main.rs
app-loadapp/src/: main.rs
app-loadapp/xtask/src/: main.rs
app-msgqueue/: .gitignore  .gitrepo  Cargo.toml  README.md  build.rs
app-msgqueue/configs/: loongarch64.toml  x86_64.toml
app-msgqueue/exercise/: Cargo.toml
app-msgqueue/exercise/modules/bump_allocator/: Cargo.toml
app-msgqueue/exercise/modules/bump_allocator/src/: lib.rs
app-msgqueue/exercise/test/: Cargo.toml
app-msgqueue/scripts/: test.sh
app-msgqueue/src/: main.rs
app-msgqueue/xtask/src/: main.rs
app-readblk/: .gitattributes  .gitrepo  Cargo.toml  README.md
app-readblk/configs/: aarch64.toml  x86_64.toml
app-readblk/scripts/: test.sh
app-readblk/src/: main.rs
app-readblk/xtask/src/: main.rs
app-readpflash/: .gitignore  Cargo.toml  README.md
app-readpflash/src/: main.rs
app-readpflash/xtask/src/: main.rs
app-runlinuxapp/: Cargo.toml  README.md
app-runlinuxapp/exercise/payload/mapfile_c/: mapfile.c
app-runlinuxapp/exercise/test/: Cargo.toml
app-runlinuxapp/exercise/test/src/: loader.rs  syscall.rs
app-runlinuxapp/src/: loader.rs  main.rs  syscall.rs  task.rs
app-runlinuxapp/xtask/src/: main.rs
app-userprivilege/: .axconfig.toml  Cargo.toml  README.md
app-userprivilege/payload/: linker.ld
app-userprivilege/payload/src/: main.rs
app-userprivilege/src/: main.rs  syscall.rs  task.rs
app-userprivilege/xtask/src/: main.rs
exercise-altalloc/: .gitrepo  Cargo.toml  README.md
exercise-altalloc/configs/: aarch64.toml  riscv64.toml
exercise-altalloc/modules/axalloc/: Cargo.toml  README.md
exercise-altalloc/modules/axalloc/src/: default_impl.rs
exercise-altalloc/modules/bump_allocator/: Cargo.toml
exercise-altalloc/modules/bump_allocator/src/: lib.rs
exercise-altalloc/scripts/: test.sh
exercise-altalloc/src/: main.rs
exercise-altalloc/xtask/src/: main.rs
exercise-hashmap/: .gitrepo  Cargo.toml  README.md
exercise-hashmap/configs/: loongarch64.toml  riscv64.toml
exercise-hashmap/scripts/: test.sh
exercise-printcolor/: .gitignore  .gitrepo  Cargo.toml  README.md
exercise-printcolor/configs/: aarch64.toml  x86_64.toml
exercise-printcolor/scripts/: test.sh
exercise-printcolor/src/: main.rs
exercise-printcolor/xtask/src/: main.rs
exercise-ramfs-rename/: Cargo.toml  README.md
exercise-ramfs-rename/.cargo/: config.toml
exercise-ramfs-rename/configs/: loongarch64.toml  riscv64.toml
exercise-ramfs-rename/scripts/: test.sh
exercise-ramfs-rename/src/: main.rs
exercise-ramfs-rename/xtask/src/: main.rs
exercise-sysmap/: .gitrepo  Cargo.toml  README.md
exercise-sysmap/configs/: aarch64.toml  loongarch64.toml  riscv64.toml  x86_64.toml
exercise-sysmap/scripts/: test.sh
exercise-sysmap/src/: loader.rs  main.rs  syscall.rs  task.rs
exercise-sysmap/xtask/src/: main.rs
report/: report.md
scripts/: batch_app_exec.sh  batch_exercise_exec.sh  crates.txt
(+11 files in other folders)
