[package]
name = "tg-arceos-tutorial"
version = "0.3.2"
edition = "2024"
authors = ["LearningOS Team"]
description = "Meta crate bundle for ArceOS tutorial apps, with offline archive and extract scripts."
keywords = ["arceos", "os", "tutorial", "bundle"]
categories = ["no-std", "embedded"]
license = "GPL-3.0"
repository = "https://github.com/rcore-os/tg-arceos-tutorial"
homepage = "https://github.com/rcore-os/tg-arceos-tutorial"
documentation = "https://docs.rs/tg-arceos-tutorial"
readme = "README.md"

include = [
    "Cargo.toml",
    "README.md",
    "src/**",
    "bundle/apps.tar.gz",
    "scripts/**",
]
