[package]
name = "arceos-fairsched"
version = "0.4.6"
edition = "2024"
authors = ["Lei Shi <shi_lei@massclouds.com>", "Yu Chen <yuchen@tsinghua.edu.cn>"]
description = "A preemptive CFS scheduling crate (from crates.io) for ArceOS demonstrating timer-interrupt-driven task switching"
license = "GPL-3.0-or-later OR Apache-2.0 OR MulanPSL-2.0"
homepage = "https://github.com/arceos-org/app-fairsched"
repository = "https://github.com/arceos-org/app-fairsched/tree/dev"
keywords = ["arceos", "example", "multitask", "scheduler", "cfs"]
categories = ["os", "no-std"]
include = [
    "src/**",
    "build.rs",
    "configs/**",
    "xtask/src/**",
    ".cargo/config.toml",
    "rust-toolchain.toml",
    "README.md",
    "LICENSE*",
]

[features]
default = []
axstd = ["dep:axstd", "dep:axlog"]
xtask = ["dep:clap"]

[[bin]]
name = "xtask"
path = "xtask/src/main.rs"
required-features = ["xtask"]

[dependencies]
axstd = { version = "0.2.2-preview.1", features = ["defplat", "alloc", "paging", "multitask", "sched-cfs"], optional = true }
axlog = { version = "0.2.2-preview.1", optional = true }
clap = { version = "4", features = ["derive"], optional = true }

[profile.release]
