[package]
name = "arceos-helloworld"
version = "0.4.6"
edition = "2024"
authors = ["Yuekai Jia <equation618@gmail.com>", "Yu Chen <yuchen@tsinghua.edu.cn>"]
description = "A simple helloworld crate (from crates.io) for ArceOS"
license = "GPL-3.0-or-later OR Apache-2.0 OR MulanPSL-2.0"
homepage = "https://github.com/arceos-org/app-helloworld"
repository = "https://github.com/arceos-org/app-helloworld/tree/dev"
keywords = ["arceos", "example"]
categories = ["os", "no-std"]
include = [
    "src/**",
    "build.rs",
    "configs/**",
    "xtask/src/**",
    ".cargo/config.toml",
    "rust-toolchain.toml",
    "README.md",
    "LICENSE*",
    "exercise/**",
]

[features]
default = ["axstd"]
axstd = ["dep:axstd"]
xtask = ["dep:clap"]

[[bin]]
name = "xtask"
path = "xtask/src/main.rs"
required-features = ["xtask"]

[dependencies]
axstd = { version = "0.2.2-preview.1", features = ["defplat"], optional = true }
clap = { version = "4", features = ["derive"], optional = true }

[profile.release]