[package]
name = "arceos-msgqueue-qfr"
version = "0.0.1-preview.1"
edition = "2024"
authors = ["Lei Shi <shi_lei@massclouds.com>", "Yu Chen <yuchen@tsinghua.edu.cn>"]
description = "A message-queue crate (from crates.io) for ArceOS demonstrating cooperative multi-task scheduling with PFlash MMIO"
license = "GPL-3.0-or-later OR Apache-2.0 OR MulanPSL-2.0"
homepage = "https://github.com/arceos-org/app-msgqueue"
repository = "https://github.com/arceos-org/app-msgqueue/tree/dev"
keywords = ["arceos", "example", "multitask", "msgqueue"]
categories = ["os", "no-std"]
include = [
    "src/**",
    "build.rs",
    "configs/**",
    "xtask/src/**",
    ".cargo/config.toml",
    "rust-toolchain.toml",
    "README.md",
    "LICENSE*",
    "exercise/**",
]

[features]
default = []
axstd = ["dep:axstd"]
xtask = ["dep:clap"]

[[bin]]
name = "xtask"
path = "xtask/src/main.rs"
required-features = ["xtask"]

[dependencies]
axstd = { version = "0.2.2-preview.1", features = ["defplat", "alloc", "paging", "multitask"], optional = true }
clap = { version = "4", features = ["derive"], optional = true }

[profile.release]
