[package]
name = "arceos-sysmap"
version = "0.4.0"
edition = "2024"
authors = ["Yu Chen <yuchen@tsinghua.edu.cn>", "Yifan Wang <w-yf22@mails.tsinghua.edu.cn>"]
description = "A exercise about supporting sys_mmap operation for ArceOS"
license = "GPL-3.0"
homepage = "https://github.com/arceos-org/tg-arceos-tutorial"
repository = "https://github.com/arceos-org/tg-arceos-tutorial"
keywords = ["arceos", "exercise", "uspace", "syscall", "mmap"]
categories = ["os", "no-std"]

[features]
default = []
axstd = [
    "dep:axstd", "dep:axfeat", "dep:axfs", "dep:axio",
    "dep:axmm", "dep:axhal", "dep:axsync", "dep:axtask", "dep:axlog",
    "dep:axerrno", "dep:memory_addr",
    "dep:kernel-elf-parser",
    "dep:bitflags",
]
xtask = ["dep:clap", "dep:fatfs"]

[[bin]]
name = "xtask"
path = "xtask/src/main.rs"
required-features = ["xtask"]

[dependencies]
axstd = { version = "0.3.0-preview.3", features = ["defplat", "alloc", "paging", "multitask", "sched-cfs", "uspace", "fp-simd"], optional = true }
axfeat = { version = "0.3.0-preview.3", features = ["fs", "fp-simd"], optional = true }
axfs = { version = "0.3.0-preview.3", optional = true }
axio = { version = "0.3.0-pre.1", optional = true }
axmm = { version = "0.3.0-preview.3", features = ["copy"], optional = true }
axhal = { version = "0.3.0-preview.3", features = ["uspace"], optional = true }
axsync = { version = "0.3.0-preview.3", optional = true }
axtask = { version = "0.3.0-preview.3", optional = true }
axlog = { version = "0.3.0-preview.3", optional = true }
axerrno = { version = "0.2", optional = true }
memory_addr = { version = "0.4", optional = true }
kernel-elf-parser = { version = "0.3", optional = true }
bitflags = { version = "2", default-features = false, optional = true }

clap = { version = "4", features = ["derive"], optional = true }
fatfs = { version = "0.3.6", optional = true }

[profile.release]
